Bug 975636 - Fix parallel bitop VM functions. (r=nmatsakis)